@@ -2,6 +2,10 @@
 HarderBasicLogistics-inserter-placement-blocking=Inserter placement restriction
 HarderBasicLogistics-sound-on-placement-blocking=Play sound when placement is blocked
 HarderBasicLogistics-placement-blocking-burner-inserters=Restriction applies to burner inserters
+
+HarderBasicLogistics-special-machines=Machines that allow special loaders/inserters
+HarderBasicLogistics-special-loaders-inserters=Special loaders/inserters
+
 HarderBasicLogistics-remove-long-inserters=Remove long inserters
 HarderBasicLogistics-shorten-underground-belts=Shorten underground belts
 HarderBasicLogistics-belt-speed-multiplier=Belt speed multiplier
@@ -19,6 +23,8 @@ HarderBasicLogistics-recipe-multiplier-loaders=Ingredients multiplier: Loaders
 [mod-setting-description]
 HarderBasicLogistics-inserter-placement-blocking=Prevent inserters from being placed next to other inserters. If set to "allow all", no placements will be blocked.
 HarderBasicLogistics-placement-blocking-burner-inserters=If playing with an extended burner phase, you might need burner inserters to fuel other burner inserters, so you can use this to disable placement restrictions for them.
+HarderBasicLogistics-special-machines=Comma-separated list of prototype IDs, for example "ir3-beltbox-steam,ic-containerization-machine-1". If this isn't empty, then special loaders/inserters can only be used with these machines.
+HarderBasicLogistics-special-loaders-inserters=Comma-separated list of prototype IDs, for example "miniloader,aai-loader,ir3-loader-steam". If this isn't empty, then these loaders/inserters can only be used with the machines in the setting above. Do NOT put long inserters or length-2 loaders in this list, as they won't work correctly.
 HarderBasicLogistics-remove-long-inserters=If turned on, this mod will remove all crafting recipes for long inserters. Long inserters in inventories or already placed in the world will not be removed.
 HarderBasicLogistics-shorten-underground-belts=Makes underground belts shorter, and also adjusts their recipes to consume the corresponding number of belt items as ingredients. When it says "shorten to 1" that means there's 1 empty dirt tile between the two underground-belt entities.
 HarderBasicLogistics-belt-speed-multiplier=Applies to transport belts, underground belts, and loaders, but not splitters.
